--- a/src/App.css
+++ b/src/App.css
@@ -49,12 +49,16 @@ img {
 }
 .duty-input {
   width: 33%;
+  font-weight: bold;
+  font-family: Karla;
 }
 .tags-input {
   width: 65%;
+  font-family: Karla;
 }
 .desc-input {
   width: 100%;
+  font-family: Karla;
 }
 .title {
   font-size: 40px;
@@ -87,4 +91,15 @@ img {
   display: flex;
   background: #f0f0f0;
   padding: 10px;
+}
+.tags-container{
+  display: flex;
+}
+.tag-item{
+  background: rgb(245, 185, 185);
+  font-size: 20px;
+  border-radius: 10px;
+  margin: 0 5px;
+  padding: 2px 5px;
+  font-weight: 600;
 }
