--- a/src/App.css
+++ b/src/App.css
@@ -80,13 +80,16 @@ img {
   font-weight: bold;
 }
 .item:nth-child(2) {
-  width: 50%;
+  width: 55%;
 }
 .item:nth-child(3) {
   width: 20%;
 }
 .item:nth-child(4) {
-  width: 15%;
+  width: 10%;
+}
+.item:nth-child(5) {
+  display: none;
 }
 .todos {
   display: flex;
