--- a/src/App.css
+++ b/src/App.css
@@ -15,23 +15,24 @@ body {
   background: pink;
 }
 form {
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
+  display: flex;
+}
+.form-container{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 .img-container {
-  position: absolute;
-  height: 100%;
-  right: -50px;
-  top: 0;
-  display: flex;
-}
-img {
-  width: 40px;
-  height: 40px;
-  margin: auto;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ justify-self: start;
 }
 .title-container {
   position: relative;
@@ -80,10 +81,10 @@ img {
   font-weight: bold;
 }
 .item:nth-child(2) {
-  width: 55%;
+  width: 45%;
 }
 .item:nth-child(3) {
-  width: 20%;
+  width: 30%;
 }
 .item:nth-child(4) {
   width: 10%;
