--- a/src/App.css
+++ b/src/App.css
@@ -88,8 +88,12 @@ form {
 }
 .item:nth-child(4) {
   width: 10%;
+  cursor: pointer;
 }
 .item:nth-child(5) {
+  display: none;
+}
+.code{
   display: none;
 }
 .todos {
@@ -107,4 +111,10 @@ form {
   margin: 0 5px;
   padding: 2px 5px;
   font-weight: 600;
+}
+.trash{
+  width: 30px;
+  height: 30px;
+  margin-left: auto;
+  cursor: pointer;
 }
